Reducing the number of RUN commands because of a 'Unable to mount using aufs' error message.  See https://github.com/dotcloud/docker/issues/1171